[gd_scene load_steps=3 format=3 uid="uid://63mcicmr7q4n"]

[ext_resource type="Script" uid="uid://b8g6oqjuylesa" path="res://Scenes/enemies/Shooter/bullet.gd" id="1_plv82"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6pbrh"]
height = 32.0

[node name="Bullet" type="Area2D"]
z_index = 1
collision_layer = 512
collision_mask = 268
script = ExtResource("1_plv82")
speed = 5.0
deflected_color = Color(0.47058824, 0.9411765, 0.9411765, 0.9372549)
metadata/_custom_type_script = "uid://b8g6oqjuylesa"

[node name="bullet_body" type="Polygon2D" parent="."]
color = Color(0.705, 0.94, 0.47, 0.9372549)
polygon = PackedVector2Array(-13, 8, 0, -32, 13, 8, 0, 21)

[node name="Polygon2D2" type="Polygon2D" parent="."]
position = Vector2(6, 6)
color = Color(1, 0.90999997, 0.952, 0.85882354)
polygon = PackedVector2Array(2, 2, -6, 10, -14, 2, -6, -14)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_6pbrh")

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
